--- a/catalog.html
+++ b/catalog.html
@@ -36,26 +36,32 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог товаров</a>
-            <ul class="catalog-list">
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Виртуальная реальность</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="catalog.html">Моноподы для селфи</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Экшн-камеры</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Фитнес-браслеты</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Умные часы</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Квадрокоптеры</a>
-              </li>
-            </ul>
+            <div class="popap-menu">
+              <ul class="catalog-list column-1">
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Виртуальная реальность</a>
+                </li>
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="catalog.html">Моноподы для селфи</a>
+                </li>
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Экшн-камеры</a>
+                </li>
+              </ul>
+              <ul class="catalog-list column-2">
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Фитнес-браслеты</a>
+                </li>
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Умные часы</a>
+                </li>
+              </ul>
+              <ul class="catalog-list column-3">
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Квадрокоптеры</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Доставка</a>
@@ -149,33 +155,41 @@
                   <option value="popular">Дешевые</option>
                 </select>
               </div>
-              <ul class="product-list">
+              <ul class="product-list-catalog">
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
-                    <h3 class="product-card-title">Любительская селфи-палка</h3>
-                    <b class="product-card-price">500 ₽</b>
+                    <div class="product-card-content">
+                      <h3 class="product-card-title">Любительская селфи-палка</h3>
+                      <b class="product-card-price">500 ₽</b>
+                    </div>
                   </a>
                 </li>
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
-                    <h3 class="product-card-title">Профессиональная селфи-палка </h3>
-                    <b class="product-card-price">1 500 ₽</b>
+                    <div class="product-card-content">
+                      <h3 class="product-card-title">Профессиональная селфи-палка </h3>
+                      <b class="product-card-price">1 500 ₽</b>
+                    </div>
                   </a>
                 </li>
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-3.jpg" alt="Непотопляемая селфи-палкаа" width="360" height="380">
-                    <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
-                    <b class="product-card-price">2 500 ₽</b>
+                    <div class="product-card-content">
+                      <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+                      <b class="product-card-price">2 500 ₽</b>
+                    </div>
                   </a>
                 </li>
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
-                    <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
-                    <b class="product-card-price">1 500 ₽</b>
+                    <div class="product-card-content">
+                      <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+                      <b class="product-card-price">1 500 ₽</b>
+                    </div>
                   </a>
                 </li>
               </ul>
