--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header header-catalog">
       <div class="page-header-wrapper">
         <div class="header-logo-container">
           <a class="header-logo" href="index.html">
@@ -36,26 +36,32 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог товаров</a>
-            <ul class="catalog-list">
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Виртуальная реальность</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="catalog.html">Моноподы для селфи</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Экшн-камеры</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Фитнес-браслеты</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Умные часы</a>
-              </li>
-              <li class="catalog-item">
-                <a class="catalog-item-link" href="#">Квадрокоптеры</a>
-              </li>
-            </ul>
+            <div class="popap-menu">
+              <ul class="catalog-list column-1">
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Виртуальная реальность</a>
+                </li>
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="catalog.html">Моноподы для селфи</a>
+                </li>
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Экшн-камеры</a>
+                </li>
+              </ul>
+              <ul class="catalog-list column-2">
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Фитнес-браслеты</a>
+                </li>
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Умные часы</a>
+                </li>
+              </ul>
+              <ul class="catalog-list column-3">
+                <li class="catalog-item">
+                  <a class="catalog-item-link" href="#">Квадрокоптеры</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Доставка</a>
