--- a/index.html
+++ b/index.html
@@ -8,71 +8,82 @@
   <body>
     <header class="page-header header-catalog">
       <div class="page-header-wrapper">
-        <div class="header-logo-container">
-          <a class="header-logo" href="index.html">
-            <img class="logo" src="images/logo.svg" alt="Логотип" width="145" height="36">
-          </a>
-        </div>
-        <div class="navigation-container">
-          <div class="header-search-container">
-            <form class="header-search" action="https://echo.htmlacademy.ru" method="get">
-              <label class="header-search-label" for="header-search"></label>
-              <input class="header-search-input" type="search" name="header-search" id="header-search" placeholder="Поиск по сайту">
-              <button class="header-search-button" type="submit" value="Найти">Найти</button>
-            </form>
+        <nav class="page-header-nav">
+          <div class="header-logo-container">
+            <a class="header-logo" href="index.html">
+              <img class="logo" src="images/logo.svg" alt="Логотип" width="145" height="36">
+            </a>
           </div>
-          <ul class="user-navigation">
-            <li class="navigation-item">
-              <a class="user-navigation-link" href="#">Войти</a>
+          <div class="navigation-container">
+            <div class="header-search-container">
+              <form class="header-search" action="https://echo.htmlacademy.ru" method="get">
+                <label class="header-search-label" for="header-search"></label>
+                <input class="header-search-input" type="search" name="header-search" id="header-search" placeholder="Поиск по сайту">
+                <button class="header-search-button" type="submit" value="Найти">Найти</button>
+              </form>
+            </div>
+            <ul class="user-navigation">
+              <li class="user-navigation-item">
+                <a class="user-navigation-link" href="#">
+                  <svg class="user-navigation-icon" xmlns="http://www.w3.org/2000/svg" width="13" height="12" fill="none" viewBox="0 0 13 12"><path fill="#000" d="M0 12h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0A3.5 3.5 0 0 0 3 3.5c0 1.3.7 2.4 1.7 3A6.3 6.3 0 0 0 0 12Z"/></svg>
+                  Войти
+                </a>
+              </li>
+              <li class="user-navigation-item">
+                <a class="user-navigation-link" href="#">
+                  <svg class="user-navigation-icon" xmlns="http://www.w3.org/2000/svg" width="10" height="12" fill="none" viewBox="0 0 10 12"><path fill="#000" d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z"/></svg>
+                  Сравнить
+                </a>
+              </li>
+              <li class="user-navigation-item">
+                <a class="user-navigation-link" href="#">
+                  <svg class="user-navigation-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14"><path fill="#000" d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"/></svg>
+                  Корзина
+                </a>
+              </li>
+            </ul>
+          </div>
+          <ul class="navigation-list">
+            <li class="navigation-item popap-menu-link">
+              <a class="navigation-link" href="#">Каталог товаров</a>
+              <div class="popap-menu">
+                <ul class="catalog-list column-1">
+                  <li class="catalog-item">
+                    <a class="catalog-item-link" href="#">Виртуальная реальность</a>
+                  </li>
+                  <li class="catalog-item">
+                    <a class="catalog-item-link" href="catalog.html">Моноподы для селфи</a>
+                  </li>
+                  <li class="catalog-item">
+                    <a class="catalog-item-link" href="#">Экшн-камеры</a>
+                  </li>
+                </ul>
+                <ul class="catalog-list column-2">
+                  <li class="catalog-item">
+                    <a class="catalog-item-link" href="#">Фитнес-браслеты</a>
+                  </li>
+                  <li class="catalog-item">
+                    <a class="catalog-item-link" href="#">Умные часы</a>
+                  </li>
+                </ul>
+                <ul class="catalog-list column-3">
+                  <li class="catalog-item">
+                    <a class="catalog-item-link" href="#">Квадрокоптеры</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="navigation-item">
-              <a class="user-navigation-link" href="#">Сравнить</a>
+              <a class="navigation-link" href="#">Доставка</a>
             </li>
             <li class="navigation-item">
-              <a class="user-navigation-link" href="#">Корзина</a>
+              <a class="navigation-link" href="#">Гарантия</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Контакты</a>
             </li>
           </ul>
-        </div>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Каталог товаров</a>
-            <div class="popap-menu">
-              <ul class="catalog-list column-1">
-                <li class="catalog-item">
-                  <a class="catalog-item-link" href="#">Виртуальная реальность</a>
-                </li>
-                <li class="catalog-item">
-                  <a class="catalog-item-link" href="catalog.html">Моноподы для селфи</a>
-                </li>
-                <li class="catalog-item">
-                  <a class="catalog-item-link" href="#">Экшн-камеры</a>
-                </li>
-              </ul>
-              <ul class="catalog-list column-2">
-                <li class="catalog-item">
-                  <a class="catalog-item-link" href="#">Фитнес-браслеты</a>
-                </li>
-                <li class="catalog-item">
-                  <a class="catalog-item-link" href="#">Умные часы</a>
-                </li>
-              </ul>
-              <ul class="catalog-list column-3">
-                <li class="catalog-item">
-                  <a class="catalog-item-link" href="#">Квадрокоптеры</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Доставка</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Гарантия</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Контакты</a>
-          </li>
-        </ul>
+        </nav>
       </div>
     </header>
 
@@ -85,22 +96,17 @@
           <h2 class="visually-hidden">
             Популярные товары
           </h2>
-          <div class="slider-arrow">
-            <button class="slider-arrow-left" type="button">Назад</button>
-            <button class="slider-arrow-right" type="button">Вперед</button>
-          </div>
-          <div class="slider-buttons">
-            <button class="slider-btn"></button>
-            <button class="slider-btn"></button>
-            <button class="slider-btn"></button>
-          </div>
           <article class="slider-item">
             <h3 class="visually-hidden">Квадрокоптер с лазером</h3>
             <div class="product-image-container">
+              <div class="slider-arrow">
+                <button class="slider-arrow slider-arrow-left" type="button">Назад</button>
+                <button class="slider-arrow slider-arrow-right" type="button">Вперед</button>
+              </div>
               <img src="images/quadrocopter.png" alt="Квадрокоптер с лазером" width="560" height="560">
             </div>
-            <div class="product-description-wrapper">
-              <span class="product-number">01</span>
+            <div class="product-description-wrapper ">
+            <span class="product-number">01</span>
               <p class="product-slogan">
                 Порхает как бабочка, жалит как пчела!
               </p>
@@ -120,7 +126,7 @@
               </ul>
             </div>
           </article>
-          <article class="slider-item">
+         <!-- <article class="slider-item">
             <h3 class="visually-hidden">Фитнес-браслет</h3>
             <div class="product-image-container">
               <img src="images/fitness-bracelet.png" alt="Фитнес-браслет" width="560" height="560">
@@ -171,7 +177,24 @@
                 </li>
               </ul>
             </div>
-          </article>
+          </article>-->
+          <ol class="slider-buttons">
+            <li class="slider-buttons-item">
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">Первый слайдер</span>
+              </button>
+            </li>
+            <li class="slider-buttons-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Второй слайдер</span>
+              </button>
+            </li>
+            <li class="slider-buttons-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Третий слайдер</span>
+              </button>
+            </li>
+          </ol>
         </section>
         <section class="products-list">
           <h2 class="visually-hidden">Каталог гаджетов</h2>
@@ -232,7 +255,7 @@
         <div class="service-container">
           <ul class="service-list-btn">
             <li class="service-item-btn">
-              <button class="service-btn service-active-btn button">Доставка</button>
+              <button class="service-btn service-active-btn">Доставка</button>
             </li>
             <li class="service-item-btn">
               <button class="service-btn button">Гарантия</button>
@@ -242,17 +265,19 @@
             </li>
           </ul>
           <ul class="service-list">
+
             <li class="service-item">
               <h3 class="service-title">Доставка</h3>
-              <p class="service-info">
+              <p class="service-info delivery-info">
                 Мы с удовольствием доставим ваш товар прямо
                 к вашему подъезду совершенно бесплатно! Ведь
                 мы неплохо заработаем, поднимая его на ваш этаж.
               </p>
             </li>
+                       <!--
             <li class="service-item">
               <h3 class="service-title">Гарантия</h3>
-              <p class="service-info">
+              <p class="service-info guarantee-info">
                 Если из-за возгорания купленного у нас товара у вас
                 сгорит дом — не переживайте, мы выдадим вам новый.
                 Товар, не дом, конечно же.
@@ -260,20 +285,27 @@
             </li>
             <li class="service-item">
               <h3 class="service-title">Кредит</h3>
-              <p class="service-info">
+              <p class="service-info credit-info">
                 Залезть в долговую яму стало проще! Кредитные
                 консультанты подберут для вас наиболее
                 выгодные условия кредита. Выгодные для банка, разумеется.
               </p>
-            </li>
+            </li>-->
+
           </ul>
         </div>
       </section>
-      <div class="advantage-container">
-        <a class="advantage">
+      <a class="advantage-container" href="#">
+        <p class="advantage-icon">
+          <span class="visually-hidden">доставка редкого товара</span>
+        </p>
+        <span class="advantage">
           Доставим редкий товар под заказ
-        </a>
-      </div>
+        </span>
+        <p class="advantage-info">
+          <span class="visually-hidden">Информация о доставке</span>
+        </p>
+      </a>
       <section class="company-info">
         <div class="company-info-container">
           <h2 class="visually-hidden">Информация и контакты компании</h2>
@@ -286,11 +318,11 @@
               Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
             </p>
             <ul class="transport-company-list">
-              <li class="transport-company-item">Меловые линии</li>
-              <li class="transport-company-item">СДИК</li>
-              <li class="transport-company-item">ТоксБерри</li>
+              <li class="transport-company-item"><span>Меловые линии</span></li>
+              <li class="transport-company-item"><span>СДИК</span></li>
+              <li class="transport-company-item"><span>ТоксБерри</span></li>
             </ul>
-              <a class="about-company-link button" href="#" >Подробнее о нас</a>
+              <a class="about-company-link about-company-more button" href="#" >Подробнее о нас</a>
           </section>
           <section class="contacts">
             <h2 class="about-company-title">Контакты</h2>
@@ -309,7 +341,7 @@
               сб—вс: с 10:00 до 19:00
               </p>
             </div>
-            <a class="about-company-link button" href="#" >Напишите нам</a>
+            <a class="about-company-link about-company-message button" href="#" >Напишите нам</a>
           </section>
         </div>
       </section>
@@ -324,7 +356,7 @@
           <div class="subscription-form-container">
             <div class="subscription-form">
               <form class="subscription-form-email" action="https://echo.htmlacademy.ru" method="post">
-                <input type="email" placeholder="Ваш e-mail" name="email">
+                <input class="subscription-input" type="email" placeholder="Ваш e-mail" name="email">
                 <button class="subscription-button" type="submit">Подписаться</button>
               </form>
             </div>
@@ -366,24 +398,24 @@
           <h2 class="visually-hidden">Мы в социальных сетях</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="button" href="#">
+              <a class="footer-social-link footer-social-link-telegram" href="#">
                 <span class="visually-hidden">Телеграмм</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="#">
+              <a class="footer-social-link footer-social-link-youtube" href="#">
                 <span class="visually-hidden">Ютюб</span>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="button" href="#">
+              <a class="footer-social-link footer-social-link-twitter" href="#">
                 <span class="visually-hidden">Твиттер</span>
               </a>
             </li>
           </ul>
           <p class="about-text">
             <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-              <img class="htmlacademy-img" src="images/logo-academy.svg" alt="логотип Html academy" width="115" height="33">
+              <svg class="htmlacademy-logo" xmlns="http://www.w3.org/2000/svg" width="115" height="33" fill="none" viewBox="0 0 115 33"><path fill="#FFC700" d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/></svg>
             </a>
           </p>
         </section>
