:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -218,6 +218,9 @@
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
+                    <div class="product-card-info">
+                      <a class="product-card-button">Подробнее</a>
+                    </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Любительская селфи-палка</h3>
                       <b class="product-card-price">500 ₽</b>
@@ -227,6 +230,9 @@
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+                    <div class="product-card-info">
+                      <a class="product-card-button">Подробнее</a>
+                    </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Профессиональная селфи-палка </h3>
                       <b class="product-card-price">1 500 ₽</b>
@@ -236,6 +242,9 @@
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-3.jpg" alt="Непотопляемая селфи-палкаа" width="360" height="380">
+                    <div class="product-card-info">
+                      <a class="product-card-button">Подробнее</a>
+                    </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                       <b class="product-card-price">2 500 ₽</b>
@@ -245,6 +254,9 @@
                 <li class="product-card">
                   <a class="product-card-link">
                     <img class="product-card-image" src="images/catalog-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+                    <div class="product-card-info">
+                      <a class="product-card-button">Подробнее</a>
+                    </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                       <b class="product-card-price">1 500 ₽</b>
@@ -254,7 +266,7 @@
               </ul>
               <button class="pagination-show-more" type="button">Загрузить ещё</button>
               <div class="pagination-container">
-                <a class="pagination-link pagination-prev pagination-disabled">
+                <a class="pagination-prev pagination-disabled">
                   Назад
                 </a>
                 <ul class="pagination">
