--- a/8/index.html
+++ b/8/index.html
@@ -36,11 +36,45 @@
                   Сравнить
                 </a>
               </li>
-              <li class="user-navigation-item">
+              <li class="user-navigation-item basket">
                 <a class="user-navigation-link" href="#">
+                  <button class="badge">2</button>
                   <svg class="user-navigation-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14"><path fill="#000" d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"/></svg>
                   Корзина
                 </a>
+                <div class="popover popover-cart popover-hidden">
+                  <div class="popover-content">
+                    <ul class="cart-items-list">
+                      <li class="cart-item">
+                        <div class="cart-item-container">
+                          <img class="cart-img" src="images/product-1-mini.jpg" alt="Мини-изображение товара в корзине" width="39" height="43">
+                          <p class="cart-item-description">
+                            Любительская селфи-палка
+                          </p>
+                        </div>
+                        <button class="cart-item-button">
+                          <span class="visually-hidden">удалить товар из корзины</span>
+                        </button>
+                      </li>
+                      <li class="cart-item">
+                        <div class="cart-item-container">
+                          <img class="cart-img" src="images/product-2-mini.jpg" alt="Мини-изображение товара в корзине" width="39" height="43">
+                          <p class="cart-item-description">
+                            Профессиональная селфи-палка
+                          </p>
+                        </div>
+                        <button class="cart-item-button">
+                          <span class="visually-hidden">удалить товар из корзины</span>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                    <div class="user-order">
+                      <span>Товаров: 2</span>
+                      <span>Сумма: 2000 ₽</span>
+                    </div>
+                    <button class="user-order-button">Открыть корзину</button>
+                </div>
               </li>
             </ul>
           </div>
@@ -97,17 +131,13 @@
           <h2 class="visually-hidden">
             Популярные товары
           </h2>
-          <article class="slider-item">
+         <article class="slider-item slider-item-active">
             <h3 class="visually-hidden">Квадрокоптер с лазером</h3>
             <div class="product-image-container">
-              <div class="slider-arrow">
-                <button class="slider-arrow slider-arrow-left" type="button">Назад</button>
-                <button class="slider-arrow slider-arrow-right" type="button">Вперед</button>
-              </div>
               <img src="images/quadrocopter.png" alt="Квадрокоптер с лазером" width="560" height="560">
             </div>
-            <div class="product-description-wrapper ">
-            <span class="product-number">01</span>
+            <div class="product-description-wrapper">
+              <span class="product-number">01</span>
               <p class="product-slogan">
                 Порхает как бабочка, жалит как пчела!
               </p>
@@ -127,7 +157,7 @@
               </ul>
             </div>
           </article>
-         <!-- <article class="slider-item">
+          <article class="slider-item slider-item-hidden">
             <h3 class="visually-hidden">Фитнес-браслет</h3>
             <div class="product-image-container">
               <img src="images/fitness-bracelet.png" alt="Фитнес-браслет" width="560" height="560">
@@ -135,7 +165,7 @@
             <div class="product-description-wrapper">
               <span class="product-number">02</span>
               <p class="product-slogan">
-                Худеем правильно!
+                Худеем<br> правильно!
               </p>
               <p class="product-description">
                 Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
@@ -149,7 +179,7 @@
               </ul>
             </div>
           </article>
-          <article class="slider-item">
+          <article class="slider-item slider-item-hidden">
             <h3 class="visually-hidden">Палка для селфи</h3>
             <div class="product-image-container">
               <img src="images/selfie-stick.png" alt="Палка для селфи" width="560" height="560">
@@ -178,7 +208,11 @@
                 </li>
               </ul>
             </div>
-          </article>-->
+          </article>
+          <div class="slider-arrow">
+            <button class="slider-arrow slider-arrow-left" type="button">Назад</button>
+            <button class="slider-arrow slider-arrow-right" type="button">Вперед</button>
+          </div>
           <ol class="slider-buttons">
             <li class="slider-buttons-item">
               <button class="slider-pagination-button slider-pagination-button-current" type="button">
@@ -256,18 +290,18 @@
         <div class="service-container">
           <ul class="service-list-btn">
             <li class="service-item-btn">
-              <button class="service-btn service-active-btn">Доставка</button>
+              <button class="service-btn service-active-btn delivery-button">Доставка</button>
             </li>
             <li class="service-item-btn">
-              <button class="service-btn button">Гарантия</button>
+              <button class="service-btn service-hidden-btn guarantee-button">Гарантия</button>
             </li>
             <li class="service-item-btn">
-              <button class="service-btn button">Кредит</button>
+              <button class="service-btn service-hidden-btn credit-button">Кредит</button>
             </li>
           </ul>
           <ul class="service-list">
 
-            <li class="service-item">
+            <li class="service-item service-item-active service-item-delivery">
               <h3 class="service-title">Доставка</h3>
               <p class="service-info delivery-info">
                 Мы с удовольствием доставим ваш товар прямо
@@ -275,8 +309,8 @@
                 мы неплохо заработаем, поднимая его на ваш этаж.
               </p>
             </li>
-                       <!--
-            <li class="service-item">
+
+            <li class="service-item service-item-hidden service-item-guarantee">
               <h3 class="service-title">Гарантия</h3>
               <p class="service-info guarantee-info">
                 Если из-за возгорания купленного у нас товара у вас
@@ -284,18 +318,18 @@
                 Товар, не дом, конечно же.
               </p>
             </li>
-            <li class="service-item">
+            <li class="service-item service-item-hidden service-item-credit">
               <h3 class="service-title">Кредит</h3>
               <p class="service-info credit-info">
                 Залезть в долговую яму стало проще! Кредитные
                 консультанты подберут для вас наиболее
                 выгодные условия кредита. Выгодные для банка, разумеется.
               </p>
-            </li>-->
-
+            </li>
           </ul>
         </div>
       </section>
+
       <a class="advantage-container" href="#">
         <p class="advantage-icon">
           <span class="visually-hidden">доставка редкого товара</span>
@@ -303,9 +337,9 @@
         <span class="advantage">
           Доставим редкий товар под заказ
         </span>
-        <p class="advantage-info">
+        <button class="advantage-info">
           <span class="visually-hidden">Информация о доставке</span>
-        </p>
+        </button>
       </a>
       <section class="company-info">
         <div class="company-info-container">
@@ -423,5 +457,55 @@
       </div>
     </footer>
 
+    <section class="modal modal-delivery">
+      <div class="modal-title-container">
+        <h1 class="about-company-title modal-title">Доставка под заказ</h1>
+          <button class="modal-close-button">
+           <span class="visually-hidden">закрыть модальное окно</span>
+          </button>
+      </div>
+      <form class="modal-delivery-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="modal-top-container">
+          <p class="user-name">
+            <label class="modal-label" for="user-name">Ваше имя:</label>
+            <input type="text" class="modal-input user-name-input" id="user-name" name="user-name" placeholder="Введите имя">
+          </p>
+          <p class="user-email">
+            <label class="modal-label" for="user-email">Ваш e-mail:</label>
+            <input type="text" class="modal-input user-email-input" id="user-email" name="user-email" placeholder="Ваш e-mail:">
+            <span class="modal-error">Забавный у вас адрес</span>
+          </p>
+        </div>
+        <div class="modal-bottom-container">
+          <p class="user-message">
+            <label class="modal-label" for="user-message">Что нужно привезти:</label>
+            <input type="text" class="modal-input user-message-input" id="user-message" name="user-message" placeholder="В свободной форме">
+          </p>
+          <div class="quantity">
+            <label class="modal-label" for="user-quantity">Количество:</label>
+              <span class="tooltip">
+                <button class="tooltip-toggle">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" viewBox="0 0 26 26"><circle cx="13" cy="13" r="13" fill="#FFE17F"/><path fill="#000" d="M14 7h-2v2h2V7ZM14 11h-2v8h2v-8Z"/></svg>
+                </button>
+                <span class="tooltip-text">
+                Постараемся найти, сколько нужно. Привезём сколько получится по требованиям
+                к провозу багажа.
+                </span>
+              </span>
+              <div class="quantity-container">
+                <button class="quantity-button quantity-minus">
+                  <span class="visually-hidden">уменьшить Количество</span>
+                </button>
+                <input type="number" class="modal-input quantity-input" id="quantity" name="quantity" placeholder="1">
+                <button class="quantity-button quantity-plus">
+                  <span class="visually-hidden">увеличить Количество</span>
+                </button>
+              </div>
+          </div>
+        </div>
+        <button class="button modal-button">Отправить</button>
+      </form>
+    </section>
+    <script src="javascript/script.js"></script>
   </body>
 </html>
