верстка всех элементов

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </li>
               <li class="user-navigation-item basket">
                 <a class="user-navigation-link" href="#">
-                  <button class="badge">2</button>
+                  <span class="badge">2</span>
                   <svg class="user-navigation-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14"><path fill="#000" d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"/></svg>
                   Корзина
                 </a>
@@ -329,7 +329,7 @@
         </div>
       </section>
 
-      <a class="advantage-container" href="#">
+      <div class="advantage-container">
         <p class="advantage-icon">
           <span class="visually-hidden">доставка редкого товара</span>
         </p>
@@ -339,7 +339,7 @@
         <button class="advantage-info">
           <span class="visually-hidden">Информация о доставке</span>
         </button>
-      </a>
+      </div>
       <section class="company-info">
         <div class="company-info-container">
           <h2 class="visually-hidden">Информация и контакты компании</h2>
@@ -458,7 +458,7 @@
 
     <section class="modal modal-delivery">
       <div class="modal-title-container">
-        <h1 class="about-company-title modal-title">Доставка под заказ</h1>
+        <h3 class="about-company-title modal-title">Доставка под заказ</h3>
           <button class="modal-close-button">
            <span class="visually-hidden">закрыть модальное окно</span>
           </button>
@@ -495,7 +495,7 @@
                 <button class="quantity-button quantity-minus">
                   <span class="visually-hidden">уменьшить Количество</span>
                 </button>
-                <input type="number" class="modal-input quantity-input" id="quantity" name="quantity" placeholder="1">
+                <input type="number" class="modal-input quantity-input" id="user-quantity" name="quantity" placeholder="1">
                 <button class="quantity-button quantity-plus">
                   <span class="visually-hidden">увеличить Количество</span>
                 </button>
