:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -216,52 +216,52 @@
               </div>
               <ul class="product-list-catalog">
                 <li class="product-card">
-                  <a class="product-card-link">
+                  <div class="product-card-link">
                     <img class="product-card-image" src="images/catalog-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
                     <div class="product-card-info">
-                      <a class="product-card-button">Подробнее</a>
+                      <a class="product-card-button" href="#">Подробнее</a>
                     </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Любительская селфи-палка</h3>
                       <b class="product-card-price">500 ₽</b>
                     </div>
-                  </a>
+                  </div>
                 </li>
                 <li class="product-card">
-                  <a class="product-card-link">
+                  <div class="product-card-link">
                     <img class="product-card-image" src="images/catalog-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
                     <div class="product-card-info">
-                      <a class="product-card-button">Подробнее</a>
+                      <a class="product-card-button" href="#">Подробнее</a>
                     </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Профессиональная селфи-палка </h3>
                       <b class="product-card-price">1 500 ₽</b>
                     </div>
-                  </a>
+                  </div>
                 </li>
                 <li class="product-card">
-                  <a class="product-card-link">
+                  <div class="product-card-link">
                     <img class="product-card-image" src="images/catalog-3.jpg" alt="Непотопляемая селфи-палкаа" width="360" height="380">
                     <div class="product-card-info">
-                      <a class="product-card-button">Подробнее</a>
+                      <a class="product-card-button" href="#">Подробнее</a>
                     </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                       <b class="product-card-price">2 500 ₽</b>
                     </div>
-                  </a>
+                  </div>
                 </li>
                 <li class="product-card">
-                  <a class="product-card-link">
+                  <div class="product-card-link">
                     <img class="product-card-image" src="images/catalog-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
                     <div class="product-card-info">
-                      <a class="product-card-button">Подробнее</a>
+                      <a class="product-card-button" href="#">Подробнее</a>
                     </div>
                     <div class="product-card-content">
                       <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                       <b class="product-card-price">1 500 ₽</b>
                     </div>
-                  </a>
+                  </div>
                 </li>
               </ul>
               <button class="pagination-show-more" type="button">Загрузить ещё</button>
